--- a/issue-tracker/package.json
+++ b/issue-tracker/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.20.0",
     "@types/node": "22.7.5",
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.1",
@@ -18,10 +19,12 @@
     "eslint-config-next": "14.2.15",
     "next": "14.2.15",
     "postcss": "8.4.47",
+    "prisma": "^5.20.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^4.11.0",
     "tailwindcss": "3.4.13",
-    "typescript": "5.6.3"
+    "typescript": "5.6.3",
+    "zod": "^3.22.2"
   }
 }
