Set up Radix UI

--- a/issue-tracker/package.json
+++ b/issue-tracker/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.20.0",
+    "@radix-ui/themes": "^1.1.2",
     "@types/node": "22.7.5",
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.1",
