--- a/issue-tracker/package.json
+++ b/issue-tracker/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
     "@prisma/client": "^5.20.0",
     "@radix-ui/themes": "^1.1.2",
     "@types/node": "22.7.5",
