--- a/issue-tracker/package.json
+++ b/issue-tracker/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
     "@prisma/client": "^5.20.0",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^1.1.2",
     "@types/node": "22.7.5",
     "@types/react": "18.3.11",
