Set up NextAuth

--- a/issue-tracker/.env
+++ b/issue-tracker/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:Derpy1234%21%40%23%24@localhost:3306/issue-tracker"
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="asdfhjkeshDIOSUFHljaksdhfajksdfjhkl!23#"
