--- a/issue-tracker/package.json
+++ b/issue-tracker/package.json
@@ -24,6 +24,7 @@
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.15",
     "next": "14.2.15",
+    "next-auth": "^4.24.8",
     "postcss": "8.4.47",
     "prisma": "^5.20.0",
     "react": "18.3.1",
