Configure Google Provider

--- a/issue-tracker/.env
+++ b/issue-tracker/.env
@@ -7,3 +7,5 @@
 DATABASE_URL="mysql://root:Derpy1234%21%40%23%24@localhost:3306/issue-tracker"
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="asdfhjkeshDIOSUFHljaksdhfajksdfjhkl!23#"
+GOOGLE_CLIENT_ID="944531140985-tumqjpb8tumvh3mcrbc87adpqe5vi6gg.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
