--- a/issue-tracker/package.json
+++ b/issue-tracker/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.20.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^1.1.2",
+    "@sentry/nextjs": "^8.34.0",
     "@tanstack/react-query": "^4.35.3",
     "@types/node": "22.7.5",
     "@types/react": "18.3.11",
